adding get profiles api method
