# static/swagger/openapi_copo_dtol.yml
@@ -406,28 +406,26 @@ paths:
                   type: string
                   enum: [ "Stand-alone", "Darwin Tree of Life (DTOL)", "Darwin Tree of Life Environmental Samples (DTOL_ENV)", "Aquatic Symbiosis Genomics (ASG)", "European Reference Genome Atlas (ERGA)" ]
                   required: true
-
-
       responses:
         "200":
           description: representation of the created profile
 
-          #content:
-          #  application/json:
-          #    schema:
-          #      $ref: '#/components/schemas/Profile'
+  /profile/get_for_user/:
+    post:
+      tags:
+        - Profile
+      security:
+        - app_id: [ ]
+      consumes:
+        - application/x-www-form-urlencoded
+      summary:
+        Get profiles for authenticated user
+      responses:
+        "200":
+          description: representation of the created profile
 
 
-#securityDefinitions:
 
-#  ApiKeyAuth:
-#    type: apiKey
-#    in: header
-#    name: X-API-Key
-
-# Global security (applies to all operations):
-#security:
-#  - ApiKeyAuth: [ ]
 
 
 components:
